--- a/package.json
+++ b/package.json
@@ -9,6 +9,29 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.9"
+    "@astrojs/db": "^0.18.1",
+    "@astrojs/react": "^4.4.0",
+    "@fontsource-variable/geist-mono": "^5.2.7",
+    "@fontsource/geist-sans": "^5.2.5",
+    "@midudev/tailwind-animations": "^0.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.12",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "astro": "^5.14.4",
+    "astro-icon": "^1.1.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "tailwind": "^4.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12",
+    "zustand": "^5.0.8"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.3.7"
   }
 }
